fix: helped contrast ratio in light mode

--- a/src/templates/ContentTemplate.scss
+++ b/src/templates/ContentTemplate.scss
@@ -195,7 +195,12 @@
 }
 
 .gatsby-highlight-code-line {
-  background-color: #291e2a;
+  html[data-theme='dark'] & {
+    background-color: #291e2a;
+  }
+  html[data-theme='light'] & {
+    background-color: #3D2C3E;
+  }
   display: block;
   margin-right: -1em;
   margin-left: -1em;
